<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/scrollView"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.RegisterDesignersActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textColor="@color/white"
    android:layout_marginTop="10dp"
    android:textSize="20sp"
    android:text="@string/designerprofile"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:elevation="5dp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_add_image_24dp"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="3dp" />
    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:hint="@string/fullname"
        android:background="@drawable/curveedgesbtngray"/>
    <Spinner
        android:id="@+id/stateSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:paddingStart="20dp"
        android:entries="@array/states_arrays"
        android:background="@drawable/curveedgesbtngray"
        android:prompt="@string/state"/>


    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:hint="@string/city"
        android:background="@drawable/curveedgesbtngray"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:hint="@string/address"
        android:background="@drawable/curveedgesbtngray"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="phone"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:hint="@string/phone"
            android:background="@drawable/curveedgesbtngray"/>
        <Spinner
            android:id="@+id/sexSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
            android:paddingStart="20dp"
            android:entries="@array/sex_arrays"
            android:background="@drawable/curveedgesbtngray"
            />
        <Spinner
            android:id="@+id/specializationSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:entries="@array/specialization_arrays"
            android:background="@drawable/curveedgesbtngray"
            />
        <Spinner
            android:id="@+id/levelSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:entries="@array/level_arrays"
            android:background="@drawable/curveedgesbtngray"
           />
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:background="@drawable/curveedgesbtn"
            android:text="@string/register"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
</layout>