<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.ForgotPasswordActivity">



<LinearLayout
    android:id="@+id/forgotpasswordparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:visibility="visible"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:text="Forgot Password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/reserpassword"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="@color/white"
            android:text="@string/resetpasswordemail"/>
    <EditText
        android:id="@+id/forgotpasswordemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:hint="@string/forgotpasswordedittextemail"
        android:background="@drawable/curveedgesbtngray"/>
        <Button
            android:id="@+id/forgotpasswordbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:background="@drawable/curveedgesbtn"
            android:text="@string/passwordreset"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:id="@+id/forgotpasswordprogressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="Loading Please Wait......"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>