<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.UploadDesignersGallery">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/buyerprofileparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/uploadgalleryprofileimg"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:clickable="true"
                        android:cropToPadding="true"
                        android:elevation="5dp"
                        android:padding="20dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/errorimagenotfound"
                        app:civ_border_color="#FFFFFFFF"
                        app:civ_border_width="3dp" />


                </LinearLayout>
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <LinearLayout
                    android:id="@+id/linearL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="11dp"
                    android:gravity="end"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.769">

                    <ImageView
                        android:id="@+id/chooseuploadimg"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_add_image_24dp"
                        tools:layout_editor_absoluteX="257dp"
                        tools:layout_editor_absoluteY="209dp" />
                </LinearLayout>

                <android.support.constraint.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="74dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_begin="337dp" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="243dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="243dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp" />

            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/uploadgallerytitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:maxLength="12"
                android:background="@drawable/curveedgesbtngray"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:paddingStart="20dp" />

            <EditText
                android:id="@+id/uploadgallerycategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/curveedgesbtngray"
                android:hint="category"
                android:inputType="textPersonName"
                android:paddingStart="20dp" />

            <EditText
                android:id="@+id/uploadgallerydescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/curveedgesbtngray"
                android:hint="Description........"
                android:inputType="textMultiLine"
                android:paddingStart="20dp"
                android:paddingBottom="150dp" />

            <Button
                android:id="@+id/uploadgallerypostbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curveedgesbtn"
                android:text="@string/post"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="240dp" />
</android.support.constraint.ConstraintLayout>